➕ Mention the logging feature in the home page of the sections under dev document.

--- a/docs/contents/development/index.mdx
+++ b/docs/contents/development/index.mdx
@@ -15,6 +15,7 @@ If you're new to the project, we recommend starting with these sections:
 - [Requirements](./requirements.mdx) - Development environment prerequisites
 - [Development Workflow](./workflow.mdx) - How to set up and contribute to the project
 - [Coding Style and Rules](./coding-style.mdx) - Coding conventions used in the project
+- [Logging](./logging.mdx) - Centralized logging configuration and best practices
 - [Type Checking with MyPy](./type-checking.mdx) - Static type checking and PEP 561 compliance
 
 ## Going Deeper
