--- a/docs/contents/document/server-references/mcp-server/cli-reference.mdx
+++ b/docs/contents/document/server-references/mcp-server/cli-reference.mdx
@@ -281,6 +281,150 @@ slack-mcp-server --log-format "%(asctime)s %(levelname)s: %(message)s"
 For detailed logging configuration including file rotation, environment variables, and programmatic usage, see the [Logging Configuration Guide](../logging-configuration).
 :::
 
+### Authentication & Environment Options
+
+:::tip Configuration Priority Order
+When running the MCP server, configuration values are loaded in this priority order:
+
+1. **`.env` file** (HIGHEST PRIORITY) - Values in your `.env` file override everything
+2. **CLI arguments** (`--slack-token`) - Used as fallback if not set in `.env` file
+3. **Environment variables** - Already set environment variables (lowest priority)
+
+This means your `.env` file values will **always take precedence** over CLI arguments.
+:::
+
+#### `--slack-token`
+**Type**: `String`  
+**Default**: `None`  
+**Description**: Slack bot token (fallback if not set in `.env` file or `SLACK_BOT_TOKEN` environment variable).
+
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # CLI argument is used as fallback (if not in .env file)
+  slack-mcp-server --slack-token "xoxb-your-token-here"
+  
+  # Disable .env file loading to force CLI argument usage
+  slack-mcp-server --slack-token "xoxb-your-token-here" --no-env-file
+  
+  # Use .env file (recommended - highest priority)
+  # Create .env file with: SLACK_BOT_TOKEN=xoxb-your-token
+  slack-mcp-server
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # CLI argument is used as fallback (if not in .env file)
+  python -m slack_mcp.mcp --slack-token "xoxb-your-token-here"
+  
+  # Disable .env file loading to force CLI argument usage
+  python -m slack_mcp.mcp --slack-token "xoxb-your-token-here" --no-env-file
+  
+  # Use .env file (recommended - highest priority)
+  python -m slack_mcp.mcp
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # CLI argument is used as fallback
+  poetry run slack-mcp-server --slack-token "xoxb-your-token-here"
+  
+  # Use .env file (recommended)
+  poetry run slack-mcp-server
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # CLI argument is used as fallback
+  uv run slack-mcp-server --slack-token "xoxb-your-token-here"
+  
+  # Use .env file (recommended)
+  uv run slack-mcp-server
+  ```
+  </TabItem>
+</Tabs>
+
+#### `--env-file`
+**Type**: `String`  
+**Default**: `.env`  
+**Description**: Path to environment file.
+
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Use default .env file
+  slack-mcp-server
+  
+  # Specify custom environment file
+  slack-mcp-server --env-file .env.production
+  slack-mcp-server --env-file /path/to/.env.staging
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Use default .env file
+  python -m slack_mcp.mcp
+  
+  # Specify custom environment file
+  python -m slack_mcp.mcp --env-file .env.production
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Development environment
+  poetry run slack-mcp-server --env-file .env.development
+  
+  # Production environment
+  poetry run slack-mcp-server --env-file .env.production
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Development environment
+  uv run slack-mcp-server --env-file .env.development
+  
+  # Production environment
+  uv run slack-mcp-server --env-file .env.production
+  ```
+  </TabItem>
+</Tabs>
+
+#### `--no-env-file`
+**Type**: `Flag`  
+**Default**: `False`  
+**Description**: Disable automatic loading from `.env` file. Useful when relying only on system environment variables or CLI arguments.
+
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Disable .env file loading
+  slack-mcp-server --no-env-file --slack-token "xoxb-your-token"
+  
+  # Use only system environment variables
+  export SLACK_BOT_TOKEN="xoxb-your-token"
+  slack-mcp-server --no-env-file
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Disable .env file loading
+  python -m slack_mcp.mcp --no-env-file --slack-token "xoxb-your-token"
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Disable .env file loading
+  poetry run slack-mcp-server --no-env-file --slack-token "xoxb-your-token"
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Disable .env file loading
+  uv run slack-mcp-server --no-env-file --slack-token "xoxb-your-token"
+  ```
+  </TabItem>
+</Tabs>
+
 ### Connection Options
 
 #### `--timeout`
